update code and demonstrate how git commit works

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,13 @@
 <head lang="en">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css"/>
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   <title>Snake</title>
-  <script src="jquery-1.11.2.min.js"></script>
+  <script
+    src="https://code.jquery.com/jquery-2.2.4.min.js"
+    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+    crossorigin="anonymous"
+  ></script>
   <script src="main.js"></script>
 </head>
 <body>
